...
/// THE SOFTWARE.

import SwiftUI


struct DisplayView: View {
  @Binding var display: String

  var body: some View {
    HStack {
      if display.isEmpty {
        Text("0")
          // Add display identifier
...
