...
    
    HStack {
      Spacer()
      
      #if targetEnvironment(macCatalyst)
      Text("\(memory)")
        .accessibility(identifier: "memoryDisplay")
        .padding(.horizontal, 5)
        .frame(
          width: geometry.size.width * 0.85,
          alignment: .trailing
        )
        .overlay(
...
